--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,9 +21,21 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    /* 编译配置项 */
+    compileOptions {
+        /* Java8支持 */
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8
+    }
+
     dataBinding {
         enabled = true
     }
+
     androidExtensions {
         experimental = true
     }
@@ -31,15 +43,68 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    api 'androidx.appcompat:appcompat:1.1.0'
-    api 'androidx.core:core-ktx:1.1.0'
+    kapt "androidx.room:room-compiler:$libsVersion.room"
+    kapt "com.github.bumptech.glide:compiler:$libsVersion.glide"
+    kapt "com.google.dagger:dagger-compiler:$libsVersion.dagger"
+    kapt "com.google.dagger:dagger-android-processor:$libsVersion.dagger"
 
-    api 'androidx.navigation:navigation-fragment-ktx:2.2.0-beta01'
-    api 'androidx.navigation:navigation-ui-ktx:2.2.0-beta01'
+    api "androidx.appcompat:appcompat:$libsVersion.androidxCore"
+    api "androidx.annotation:annotation:$libsVersion.androidxAnnotation"
+    api "androidx.recyclerview:recyclerview:$libsVersion.androidxRecyclerView"
+    api "androidx.swiperefreshlayout:swiperefreshlayout:$libsVersion.androidxRefreshLayout"
+    api "androidx.constraintlayout:constraintlayout:$libsVersion.androidxConstraintlayout"
+    api "com.google.android.material:material:$libsVersion.androidxMaterial"
+    api "com.google.android:flexbox:$libsVersion.androidxFlexbox"
+    api "androidx.core:core-ktx:$libsVersion.androidxKtx"
 
-    api 'com.google.dagger:dagger-android:2.24'
-    api 'com.google.dagger:dagger-android-support:2.24'
+    api "androidx.lifecycle:lifecycle-runtime-ktx:$libsVersion.lifecycle"
+    api "androidx.lifecycle:lifecycle-extensions:$libsVersion.lifecycle"
+    api "androidx.lifecycle:lifecycle-viewmodel-ktx:$libsVersion.lifecycle"
+
+    api "androidx.room:room-runtime:$libsVersion.room"
+    api "androidx.room:room-rxjava2:$libsVersion.room"
+
+    api "com.github.bumptech.glide:okhttp3-integration:$libsVersion.glide"
+    api "com.github.bumptech.glide:glide:$libsVersion.glide"
+
+    api "androidx.navigation:navigation-fragment-ktx:$libsVersion.navigation"
+    api "androidx.navigation:navigation-ui-ktx:$libsVersion.navigation"
+
+    api "com.google.code.gson:gson:$libsVersion.gson"
+
+    api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$libsVersion.kotlin"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:$libsVersion.coroutines"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:$libsVersion.coroutines"
+
+    api "io.reactivex.rxjava2:rxjava:$libsVersion.rxjava"
+    api "io.reactivex.rxjava2:rxandroid:$libsVersion.rxandroid"
+    api "com.jakewharton.rxbinding3:rxbinding-core:$libsVersion.rxbinding"
+
+    // auto dispose
+    api "com.uber.autodispose:autodispose:$libsVersion.autodispose"
+    api "com.uber.autodispose:autodispose-android:$libsVersion.autodispose"
+    api "com.uber.autodispose:autodispose-android-archcomponents:$libsVersion.autodispose"
+
+    api "com.afollestad.material-dialogs:core:$libsVersion.materialDialogs"
+    api "com.afollestad.material-dialogs:color:$libsVersion.materialDialogs"
+    api "com.afollestad.material-dialogs:bottomsheets:$libsVersion.materialDialogs"
+    api "com.afollestad.material-dialogs:lifecycle:$libsVersion.materialDialogs"
+
+    api "me.tatarka.bindingcollectionadapter2:bindingcollectionadapter:$libsVersion.bindingcollectionadapter"
+    api "me.tatarka.bindingcollectionadapter2:bindingcollectionadapter-recyclerview:$libsVersion.bindingcollectionadapter"
+
+    api "com.squareup.okhttp3:okhttp:$libsVersion.okhttp"
+    api "com.squareup.okhttp3:logging-interceptor:$libsVersion.okhttp"
+    api "com.squareup.retrofit2:retrofit:$libsVersion.retrofit"
+    api "com.squareup.retrofit2:converter-gson:$libsVersion.retrofit"
+    api "com.squareup.retrofit2:adapter-rxjava2:$libsVersion.retrofit"
+    api "com.squareup.retrofit2:converter-scalars:$libsVersion.retrofit"
+
+    api "com.google.dagger:dagger-android:$libsVersion.dagger"
+    api "com.google.dagger:dagger-android-support:$libsVersion.dagger"
+
+    api "me.jessyan:autosize:$libsVersion.autosize"
+    api "com.jakewharton.timber:timber:$libsVersion.timber"
 
     api 'com.github.zhuzichu520:widget:1.0.2'
 }
