--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,13 +49,13 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.1.0'
-    implementation "androidx.navigation:navigation-fragment-ktx:2.2.0-beta01"
-    implementation "androidx.navigation:navigation-ui-ktx:2.2.0-beta01"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.2.0-rc01"
+    implementation "androidx.navigation:navigation-ui-ktx:2.2.0-rc01"
 
     implementation "com.google.dagger:dagger-android:2.24"
     implementation "com.google.dagger:dagger-android-support:2.24"
 
-    implementation 'com.github.zhuzichu520:libs:1.0.23'
+    implementation 'com.github.zhuzichu520:libs:1.0.24'
     implementation 'com.github.zhuzichu520:widget:1.0.29'
 
 
