--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,8 +55,9 @@ dependencies {
     implementation "com.google.dagger:dagger-android:2.24"
     implementation "com.google.dagger:dagger-android-support:2.24"
 
-    implementation 'com.github.zhuzichu520:libs:1.0.24'
-    implementation 'com.github.zhuzichu520:widget:1.0.29'
-
+    implementation project(':libs')
+    implementation project(':widget')
+//    implementation 'com.github.zhuzichu520:libs:1.0.24'
+//    implementation 'com.github.zhuzichu520:widget:1.0.29'
 
 }
